# cdk-gw-tools

./: .pre-commit-config.yaml  README.md  cli.Dockerfile  docker-compose.yaml  interceptors-input-example.yaml  produce_policy.yaml  pyproject.toml  update_specs.sh
.cicd/: buildspec_image.yml  buildspec_manifest.yml  codebuild_docs.yaml  codebuild_release.yaml  docker-compose.builds.yml
aws_secretsmanager_rotation/: README.md  create_layer.sh  create_layer_local.sh  requirements.txt  rotation.template.yaml
cdk_gw_tools/: __init__.py
cdk_gw_tools/aws/: gw_handling.py  secrets_rotation.py
cdk_gw_tools/cli/: __init__.py  auth.py  interceptors.py  main_parser.py  plugins.py  user_mappings.py  vclusters_interceptors_subparser.py  vclusters_parser.py
cdk_gw_tools/cli/actions/: __init__.py  plugins.py  user_mappings.py
cdk_gw_tools/cli/actions/vclusters/: __init__.py  auth.py  interceptors.py  topic_mappings.py  user_mappings.py
cdk_gw_tools/cli/gw_parsers/: user_mappings.py
cdk_gw_tools/cli/vclusters_parser/: __init__.py  concentration_rules.py  interceptors.py  user_mappings.py
cdk_gw_tools/cli_actions/: __init__.py  auth.py  common.py  interceptors.py  plugins.py  user_mappings.py
cdk_gw_tools/cli_actions/vclusters/: __init__.py  topic_mappings.py
cdk_gw_tools/cli_tools/: __init__.py  import_from_config.py  import_tenants_mappings.py  set_update_interceptors.py  user_mappings_tools.py
cdk_gw_tools/common/: __init__.py  logging.py
cdk_gw_tools/specs/: interceptors-config.spec.json  interceptors_config.py  profiles_config.spec.json  tenant_mappings-input.json  user-mappings.spec.json  user_mappings.py
tests/: interceptors-input-example.yaml
